--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
                 <div class="skill-card"><i class="fab fa-node-js"></i> Node.js</div>
                 <div class="skill-card"><i class="fab fa-js-square"></i> JavaScript</div>
                 <div class="skill-card"><i class="fab fa-html5"></i> HTML5 & CSS3</div>
-                <div class="skill-card"><i class="fas fa-paint-brush"></i> UI/UX Design</div>
+                <!-- <div class="skill-card"><i class="fas fa-paint-brush"></i> UI/UX Design</div> -->
             </div>
         </section>
 
